--- a/root-config/package.json
+++ b/root-config/package.json
@@ -2,7 +2,7 @@
   "name": "@campaign/root-config",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --port 9000",
     "lint": "eslint src --ext js,ts,tsx",
     "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
     "format": "prettier --write .",
