--- a/home-mfe/package.json
+++ b/home-mfe/package.json
@@ -6,6 +6,7 @@
     "build": "webpack --mode=production"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
@@ -26,6 +27,7 @@
     "@types/react-dom": "^18.2.0",
     "@types/uuid": "^10.0.0",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^4.0.0",
