--- a/root-config/package.json
+++ b/root-config/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@babel/runtime": "^7.23.3",
     "concurrently": "^6.2.1",
+    "copy-webpack-plugin": "^13.0.1",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
